--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dialy Calendar　プライバシーポリシー</title>
+        <title>Diary Calendar　プライバシーポリシー</title>
         <meta charset="utf-8">
     </head>
     <body>
@@ -9,7 +9,7 @@
             <p style="padding: 30px; font-size: 25px;">DialyCalendar</p>
         </div>
         <div style="border: 1px lightgray solid; color:teal; font-family: serif;">
-            <h1 style="margin-left: 20px;">DialyCalendar プライバシーポリシー</h1>
+            <h1 style="margin-left: 20px;">DiaryCalendar プライバシーポリシー</h1>
             <br>
             <p style="margin-left: 20px;">
                 第三者に個人を特定できる情報を提供することはありません。
